<resources>
    <string name="app_name">estetica</string>
    <string name="btn1">ENTRAR</string>
    <string name="pass">INGRESA TU CONTRASEÑA</string>
    <string name="usr">INGRESA TU USUARIO</string>
    <string name="bt2">REGISTRATE</string>
    <string name="TITULO">REGISTRO</string>
    <string name="id">INGRESA TU USUARIO</string>
    <string name="CON">INGRESA UNA CONTRASEÑA</string>
    <string name="TEL">REGISTRA UN TELEFONO</string>
    <string name="regis">REGISTRARSE</string>
    <string name="re">regresar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navegacion">NavegacionActivity</string>
</resources>