<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#907FFA"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BIENVENIDO"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="95dp"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tinte"
        android:layout_marginLeft="150dp"/>

    <EditText
        android:id="@+id/usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usr"
        android:textSize="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:drawableLeft="@drawable/usuario"
        android:textColorHint="@color/black"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textSize="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:inputType="numberPassword"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:drawableLeft="@drawable/contrasena"
        android:textColorHint="@color/black" />
    <Button
        android:id="@+id/btn1"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:textSize="30sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="o"
       android:textStyle="bold"
       android:textSize="30sp"
       android:layout_marginLeft="195dp"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt2"
        android:textSize="30sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:onClick="Registro"
        />


</LinearLayout>